# bde-tools

./: .arcconfig  .gitignore  CMakeLists.txt  ChangeLog  Jenkinsfile  Jenkinsfile.conan  README  README.md  README.oss_alternative.md  bde_repo.html  conanfile.py  devise.yaml  faq.html  genindex.html  help.html  index.html  intro.html  objects.inv  search.html  searchindex.js  setwafenv.html  troubleshooting.html  tutorials.html  waf.html
BdeBuildSystem/: BdeBuildSystemConfig.cmake  BdeBuildSystemUtils.cmake  BdeDependencyUtils.cmake  BdeEmitPkgConfigFile.cmake  BdeGtestDriverUtils.cmake  BdeImportPkgConfigTargets.cmake  BdeInternalTargets.cmake  BdeMetadataUtils.cmake  BdePkgconfigUtils.cmake  BdeTargetUtils.cmake  BdeTestDriverUtils.cmake
BdeBuildSystem/profiles/: bde_build_profiles.json
BdeBuildSystem/scripts/: bbs_input_limiter.pl  bbs_runtest.py  check_cycles  (+10 more)
_sources/: bde_repo.txt  faq.txt  help.txt  index.txt  setwafenv.txt  troubleshooting.txt  tutorials.txt  waf.txt
bde_verify/: BDEVerify.sln  BDEVerify.vcxproj  Makefile  README  TODO  bde_verify.cfg  bdechk.html  bdeverify.cfg
cmake/: advanced.html  bdeOptsConfig.cmake.in  bde_application.cmake  bde_build_env.html  bde_component.cmake  bde_default_process.cmake  bde_default_process_application.cmake  bde_default_process_package.cmake  bde_default_process_package_group.cmake  bde_default_process_project.cmake  bde_default_process_standalone_package.cmake  bde_external_dependencies.cmake  bde_include_guard.cmake  bde_interface_target.cmake  bde_log.cmake  bde_metadata.cmake  bde_package.cmake  bde_package_group.cmake  bde_package_libraries.cmake  bde_pkgconfig_utils.cmake  bde_process_with_default.cmake  bde_project.cmake  bde_run_test.cmake  bde_runtest.cmake  bde_special_targets.cmake  bde_standalone.cmake  bde_struct.cmake  bde_test_drivers.cmake  bde_ufid.cmake  bde_uor.cmake  bde_utils.cmake  bde_virtual_function.cmake  bde_workspace.cmake  cmake_build.html  config.html  customization.html  design.html  examples.html  group.pc.in  groupConfig.cmake.in  (+1 more)
debian/: changelog  control  rules
doc/: Makefile  bde_repo.rst  conf.py  faq.rst  help.rst  index.rst  intro.rst  setwafenv.rst  troubleshooting.rst  tutorials.rst  waf.rst
docs/: Makefile  README.md
etc/: arc-anon-arcrc.skel  bde.config.spec  bde2doxy_exclude-bus.txt  bde2doxy_exclude.txt  bde_bldmgr-bus.config  bde_bldmgr.config  bde_prls.xml  bde_remoteslave.cfg  bde_remoteslave.env  bdecompilerconfig  bdedoxygen.conf  debian-rules-flavors  debian-rules-uplid  default.config.dirs  default.opts  default.opts.bak  default_internal.opts  release.spec  rules.conf  vanilla.spec  wscript
expected-test-output/: configured_builds.out
extras/: wscript
reference/: bde_repo.html
scripts/: README  buildSnapshot.sh  generateGccWarningsLogs.pl  insert-boilerplate-to-sources.pl  logTs.pl  nightly-run-bsl-internal.sh  nightly-run-common-script.sh  nightly-run-dev.sh  nightly-run-nextrel.sh  nightly-run-oneshot.sh  report-latest  runDevThenAPI.sh  runFromGitDevThenAPI.sh  runFromGitNextrel.sh  runNextrel.sh  runRobo.sh
share/: CMakeLists.txt  project.cmake  wscript
share/emacs/: bde.el
share/sample-config/: bdecompilerconfig.sample  bdelayoutconfig.sample
share/templates/vscode/: common_launch_args.json  cppvsdbg_launch.json  extensions.json  gdb_launch.json  launch.json  lldb_launch.json  settings.json  tasks.json  udb_launch.json
src/: privgw.c
tests/MetadataTests/package/: CMakeLists.txt
tests/MetadataTests/package/package/: btst.dep  btst.mem
tests/MetadataTests/package_group/: CMakeLists.txt
tests/MetadataTests/package_group/groups/bts/btsa/package/: btsa.dep  btsa.mem
tests/MetadataTests/package_group/groups/bts/btsb/package/: btsb.dep  btsb.mem
tests/MetadataTests/package_group/groups/bts/btsc/package/: btsc.dep  btsc.mem
tests/MetadataTests/package_group/groups/bts/group/: bts.dep  bts.mem
tests/TargetUorTests/bde_source/: CMakeLists.txt
tests/TargetUorTests/bde_source/adapters/a_nodep/: CMakeLists.txt  a_nodep_component.cpp  a_nodep_component.h  a_nodep_component.t.cpp
tests/TargetUorTests/bde_source/adapters/a_nodep/package/: a_nodep.mem
tests/TargetUorTests/bde_source/adapters/a_xyz/: CMakeLists.txt  a_xyz_component.cpp  a_xyz_component.h
tests/TargetUorTests/bde_source/adapters/a_xyz/package/: a_xyz.mem
tests/TargetUorTests/bde_source/applications/nodep/: CMakeLists.txt
tests/TargetUorTests/bde_source/applications/xyzmainonly/: CMakeLists.txt  xyzmainonly.m.cpp
tests/TargetUorTests/bde_source/applications/xyzwithlib/: CMakeLists.txt  m_xyzwithlib_component.cpp  m_xyzwithlib_component.h  m_xyzwithlib_component.t.cpp  xyzwithlib.m.cpp
tests/TargetUorTests/bde_source/applications/xyzwithlib/package/: xyzwithlib.dep  xyzwithlib.mem
tests/TargetUorTests/bde_source/groups/xyz/: CMakeLists.txt
tests/TargetUorTests/bde_source/groups/xyz/group/: xyz.t.dep
tests/TargetUorTests/bde_source/groups/xyz/xyza/: xyza_component.cpp  xyza_component.g.cpp  xyza_component.h
tests/TargetUorTests/custom_packages/: CMakeLists.txt
tests/TargetUorTests/custom_packages/xyz/: CMakeLists.txt
tests/TargetUorTests/custom_packages/xyz/xyza/: xyza_component.cpp
tests/TargetUorTests/custom_packages/xyz/xyzb/: xyzb_component.cpp  xyzb_component.h  xyzb_component.t.cpp
tests/TargetUorTests/custom_packages/xyz/xyzb/package/: xyzb.dep
tests/TargetUorTests/custom_packages/xyz/xyzc/: CMakeLists.txt  xyzc_component.cpp  xyzc_component.h
tests/TargetUorTests/custom_packages/xyz/xyzc/package/: xyzc.mem
tests/TargetUorTests/simple_group/xyz/: CMakeLists.txt
tests/TargetUorTests/simple_group/xyz/group/: xyz.mem
tests/TargetUorTests/simple_group/xyz/xyza/package/: xyza.mem
tests/TargetUorTests/simple_group/xyz/xyzb/: xyzb_component.cpp
tests/TargetUorTests/simple_group/xyz/xyzb/package/: xyzb.dep  xyzb.mem
tests/TargetUorTests/simple_group/xyz/xyzc/: xyzc_component.cpp
tests/TargetUorTests/simple_group/xyz/xyzc/package/: xyzc.dep
website/: README  bbg.py  bdetools_website_startup.py  results.py  summary.py
(+1231 files in other folders)
