cmake_minimum_required( VERSION 3.15 )

project( package_group NONE )

find_package( BdeBuildSystem REQUIRED )

bbs_read_metadata( GROUP bts SOURCE_DIR groups/bts )

include( ../TestUtil.cmake )

message( VERBOSE "Components  : ${btsa_COMPONENTS}" )
message( VERBOSE "Include dir : ${btsa_INCLUDE_DIRS}" )
message( VERBOSE "Headers     : ${btsa_INCLUDE_FILES}" )
message( VERBOSE "Source dir  : ${btsa_SOURCE_DIRS}" )
message( VERBOSE "Source files: ${btsa_SOURCE_FILES}" )
message( VERBOSE "Test files  : ${btsa_TEST_SOURCES}" )
message( VERBOSE "Dependencies: ${btsa_DEPENDS}" )
message( VERBOSE "Metadata dir: ${btsa_METADATA_DIRS}\n" )
__test_compare_lists( "${btsa_INCLUDE_FILES}" "btsa_comp.h" )
__test_compare_lists( "${btsa_SOURCE_FILES}" "btsa_comp.cpp" )
__test_compare_lists( "${btsa_TEST_SOURCES}" "" )

message( VERBOSE "Components  : ${btsb_COMPONENTS}" )
message( VERBOSE "Include dir : ${btsb_INCLUDE_DIRS}" )
message( VERBOSE "Headers     : ${btsb_INCLUDE_FILES}" )
message( VERBOSE "Source dir  : ${btsb_SOURCE_DIRS}" )
message( VERBOSE "Source files: ${btsb_SOURCE_FILES}" )
message( VERBOSE "Test files  : ${btsb_TEST_SOURCES}" )
message( VERBOSE "Dependencies: ${btsb_DEPENDS}" )
message( VERBOSE "Metadata dir: ${btsb_METADATA_DIRS}\n" )
__test_compare_lists( "${btsb_INCLUDE_FILES}" "" )
__test_compare_lists( "${btsb_SOURCE_FILES}" "btsb_comp.cpp" )
__test_compare_lists( "${btsb_TEST_SOURCES}" "" )

message( VERBOSE "Components  : ${btsc_COMPONENTS}" )
message( VERBOSE "Include dir : ${btsc_INCLUDE_DIRS}" )
message( VERBOSE "Headers     : ${btsc_INCLUDE_FILES}" )
message( VERBOSE "Source dir  : ${btsc_SOURCE_DIRS}" )
message( VERBOSE "Source files: ${btsc_SOURCE_FILES}" )
message( VERBOSE "Test files  : ${btsc_TEST_SOURCES}" )
message( VERBOSE "Dependencies: ${btsc_DEPENDS}" )
message( VERBOSE "Metadata dir: ${btsc_METADATA_DIRS}\n" )
__test_compare_lists( "${btsc_INCLUDE_FILES}" "btsc_comp.h" )
__test_compare_lists( "${btsc_SOURCE_FILES}" "btsc_comp.cpp" )
__test_compare_lists( "${btsc_TEST_SOURCES}" "btsc_comp.t.cpp" )

message( VERBOSE "Packages    : ${bts_PACKAGES}" )
message( VERBOSE "Components  : ${bts_COMPONENTS}" )
message( VERBOSE "Headers     : ${bts_INCLUDE_FILES}" )
message( VERBOSE "Source dir  : ${bts_SOURCE_DIRS}" )
message( VERBOSE "Source files: ${bts_SOURCE_FILES}" )
message( VERBOSE "Test files  : ${bts_TEST_SOURCES}" )
message( VERBOSE "Dependencies: ${bts_DEPENDS}" )
message( VERBOSE "Metadata dir: ${bts_METADATA_DIRS}\n" )
__test_compare_lists( "${bts_INCLUDE_FILES}" "btsa_comp.h;btsc_comp.h" )
__test_compare_lists( "${bts_SOURCE_FILES}" "btsa_comp.cpp;btsb_comp.cpp;btsc_comp.cpp" )
__test_compare_lists( "${bts_TEST_SOURCES}" "btsc_comp.t.cpp" )
